# hawkeye

./: .gitignore  build.gradle  readme.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/: AndroidManifest.xml
app/src/androidTest/java/com/skillion/hawkeye/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ColorInt.txt  hawk.txt
app/src/main/cpp/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  KalmanTracker.cpp  KalmanTracker.h  SORT.cpp  SORT.h  native-lib.cpp
app/src/main/java/com/skillion/hawkeye/: AddCameraPopupActivity.java  Bbox_Data.java  CameraActivity.java  CameraActivity_External.java  CameraActivity_Internal.java  CameraConnectionFragment.java  CustomAdapter.java  DetectorActivity.java  DetectorActivity_External.java  DetectorActivity_External_tflite.java  DetectorActivity_External_yolo.java  DetectorActivity_Internal.java  TestLayout.java  (+5 more)
app/src/main/res/drawable/: button_blue.xml  button_white.xml  ic_down.xml  spinner_drop_down_shape.xml
app/src/main/res/layout/: activity_add_camera_popup.xml  activity_camera.xml  activity_history_video.xml  activity_main.xml  activity_preference.xml  activity_save_video.xml  activity_upload_video.xml  activity_video_view.xml  custom_spiner_text_item.xml  custom_spinner_dropdown_item.xml  popup_incident_detected.xml  sample_video_view.xml  test.xml  tfe_od_camera_connection_fragment_tracking.xml  volume_change.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+28 files in other folders)
